--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,25 +9,22 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="650dp"
+            android:layout_height="682dp"
             android:paddingStart="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.283" />
+            app:layout_constraintTop_toBottomOf="@+id/tvFuelGasUpHistory"
+            app:layout_constraintVertical_bias="0.608" />
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.074"
+            app:layout_constraintEnd_toStartOf="@+id/tvFuelGasUpHistory"
+            app:layout_constraintHorizontal_bias="0.187"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.651"
+            app:layout_constraintTop_toTopOf="@+id/tvFuelGasUpHistory"
             app:srcCompat="@drawable/baseline_menu_24" />
 
         <LinearLayout
@@ -92,13 +89,14 @@
 
         <TextView
             android:id="@+id/tvFuelGasUpHistory"
-            android:layout_width="133dp"
+            android:layout_width="182dp"
             android:layout_height="18dp"
-            android:text="Fuel / Gas Up History"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="68dp"
+            android:text="FUEL / GAS UP HISTORY"
+            android:textColor="@color/black"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="parent" />
 
 
