--- a/app/src/main/res/layout/add_dialog_box.xml
+++ b/app/src/main/res/layout/add_dialog_box.xml
@@ -24,33 +24,33 @@
 
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/imgBtnView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="72dp"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-                app:layout_constraintEnd_toStartOf="@+id/imageView2"
-                app:layout_constraintTop_toTopOf="@+id/imageView5"
-                app:srcCompat="@drawable/baseline_edit_24" />
+                app:layout_constraintBottom_toBottomOf="@+id/imgBtnSave"
+                app:layout_constraintEnd_toStartOf="@+id/imgBtnDelete"
+                app:layout_constraintTop_toTopOf="@+id/imgBtnSave"
+                app:srcCompat="@drawable/baseline_playlist_add_check_24" />
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/imgBtnDelete"
                 android:layout_width="22dp"
                 android:layout_height="24dp"
                 android:layout_marginEnd="72dp"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+                app:layout_constraintBottom_toBottomOf="@+id/imgBtnView"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/imageView3"
+                app:layout_constraintTop_toTopOf="@+id/imgBtnView"
                 app:srcCompat="@drawable/baseline_delete_24" />
 
             <ImageView
-                android:id="@+id/imageView5"
+                android:id="@+id/imgBtnSave"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="68dp"
                 android:layout_marginBottom="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/imageView3"
+                app:layout_constraintEnd_toStartOf="@+id/imgBtnView"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:srcCompat="@drawable/baseline_add_24" />
@@ -87,7 +87,7 @@
                         tools:layout_editor_absoluteY="56dp">
 
                         <EditText
-                            android:id="@+id/tvKmPerLiterShow"
+                            android:id="@+id/etKmPerLiterShow"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:paddingStart="15dp"
@@ -232,15 +232,23 @@
                         app:boxStrokeColor="@color/black"
                         app:hintTextColor="@color/Gray">
 
-                        <EditText
-                            android:id="@+id/etGasStation"
+                        <Spinner
+                            android:id="@+id/spinnerGasStation"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:paddingStart="15dp"
-                            android:textColor="@color/black"
-                            android:textColorHint="@color/Gray"
-                            tools:layout_editor_absoluteX="16dp"
-                            tools:layout_editor_absoluteY="62dp" />
+                            android:layout_height="50dp"
+                            android:layout_weight="1"
+                            android:paddingStart="10dp" />
+
+<!--                        <EditText-->
+<!--                            android:id="@+id/etGasStation"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="match_parent"-->
+<!--                            android:paddingStart="15dp"-->
+<!--                            android:textColor="@color/black"-->
+<!--                            android:textColorHint="@color/Gray"-->
+<!--                            tools:layout_editor_absoluteX="16dp"-->
+<!--                            tools:layout_editor_absoluteY="62dp" />-->
+
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
