--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="155dp"
+    android:layout_height="170dp"
     android:layout_marginTop="2dp"
     android:background="@color/white">
 
@@ -11,8 +11,8 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="394dp"
-        android:layout_height="151dp"
-        android:layout_marginTop="2dp"
+        android:layout_height="160dp"
+        android:layout_marginTop="3dp"
         app:cardBackgroundColor="#E4E4E4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,12 +27,12 @@
 
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/imgBtnDelete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="28dp"
-                app:layout_constraintStart_toEndOf="@+id/imageView3"
-                app:layout_constraintTop_toTopOf="@+id/imageView3"
+                app:layout_constraintStart_toEndOf="@+id/imgBtnView"
+                app:layout_constraintTop_toTopOf="@+id/imgBtnView"
                 app:srcCompat="@drawable/baseline_delete_24" />
 
             <com.google.android.material.textfield.TextInputLayout
@@ -309,7 +309,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/imgBtnView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="104dp"
