--- a/app/src/main/res/layout/activity_consumption_detail.xml
+++ b/app/src/main/res/layout/activity_consumption_detail.xml
@@ -310,7 +310,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="320dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="40dp"
             android:hint="@string/Kilometer_Per_Liter"
             android:textColorHint="@color/Gray"
             app:boxBackgroundColor="@color/white"
@@ -341,6 +341,18 @@
                 android:textColorHint="@color/Gray"
                 android:textSize="20sp" />
         </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="GAS UP INFORMATION"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/textField1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
