--- a/app/src/main/res/layout/update_dialog_box.xml
+++ b/app/src/main/res/layout/update_dialog_box.xml
@@ -9,7 +9,8 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="355dp"
-        android:layout_height="460dp"
+        android:layout_height="471dp"
+        android:layout_marginTop="5dp"
         app:cardBackgroundColor="#E4E4E4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,48 +20,46 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="0dp">
-
+            android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/tvAddDialogBoxTitle"
+                android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="ADD GAS INFORMATION"
-                android:textAlignment="center"
-                android:textAllCaps="false"
+                android:layout_marginTop="5dp"
+                android:text="UPDATE GAS UP INFORMATION"
                 android:textColor="@color/black"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/textField1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/scrollView2" />
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/imgBtnCancel"
-                android:layout_width="22dp"
-                android:layout_height="24dp"
-                android:layout_marginEnd="72dp"
-                app:layout_constraintBottom_toBottomOf="@+id/imgBtnSave"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imgBtnSave"
-                app:srcCompat="@drawable/baseline_cancel_24" />
 
             <ImageView
                 android:id="@+id/imgBtnSave"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="120dp"
-                android:layout_marginBottom="15dp"
+                android:layout_marginBottom="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:srcCompat="@drawable/baseline_add_24" />
+                app:srcCompat="@drawable/baseline_save_24" />
+
+            <ImageView
+                android:id="@+id/imgBtnCancelUpdate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="72dp"
+                app:layout_constraintBottom_toBottomOf="@+id/imgBtnSave"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/imgBtnSave"
+                app:srcCompat="@drawable/baseline_cancel_24" />
 
             <ScrollView
-                android:id="@+id/scrollView2"
                 android:layout_width="345dp"
                 android:layout_height="415dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="207dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +70,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="50dp"
+                    android:layout_marginTop="10dp"
                     android:orientation="vertical">
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -80,6 +79,7 @@
                         android:layout_width="320dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="15dp"
+                        android:layout_marginTop="10dp"
                         android:hint="@string/Kilometer_Per_Liter"
                         android:textColorHint="@color/Gray"
                         app:boxBackgroundColor="@color/white"
@@ -90,7 +90,7 @@
 
                         <EditText
                             android:id="@+id/etKmPerLiterShow"
-                            android:layout_width="match_parent"
+                            android:layout_width="319dp"
                             android:layout_height="match_parent"
                             android:paddingStart="15dp"
                             android:textColor="@color/black"
@@ -239,9 +239,6 @@
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:layout_weight="1"
-                            android:background="@color/white"
-                            android:backgroundTint="@color/white"
-                            android:contextClickable="false"
                             android:paddingStart="10dp" />
 
                         <!--                        <EditText-->
@@ -287,7 +284,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="15dp"
                         android:layout_marginTop="8dp"
-                        android:layout_marginBottom="60dp"
                         android:hint="@string/Date"
                         android:textColorHint="@color/Gray"
                         app:boxBackgroundColor="@color/white"
