--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -33,24 +33,26 @@
 
         <ImageView
             android:id="@+id/imgProfilePhoto"
-            android:layout_width="120dp"
-            android:layout_height="128dp"
+            android:layout_width="115dp"
+            android:layout_height="104dp"
             android:layout_marginStart="48dp"
             android:layout_marginTop="20dp"
+            android:scaleType="fitXY"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView7"
-            tools:srcCompat="@tools:sample/avatars" />
+            tools:srcCompat="@drawable/profile_photo_png" />
 
         <ImageView
             android:id="@+id/imgVehiclePhoto"
-            android:layout_width="192dp"
-            android:layout_height="127dp"
+            android:layout_width="202dp"
+            android:layout_height="112dp"
             android:layout_marginStart="20dp"
+            android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="@+id/imgProfilePhoto"
             app:layout_constraintStart_toEndOf="@+id/imgProfilePhoto"
             app:layout_constraintTop_toTopOf="@+id/imgProfilePhoto"
             app:layout_constraintVertical_bias="1.0"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
+            tools:srcCompat="@drawable/car_profile_png" />
 
         <TextView
             android:id="@+id/textView7"
@@ -86,9 +88,9 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:paddingStart="15dp"
+                android:text="@string/FullName"
                 android:textColor="@color/black"
-                android:textColorHint="@color/Gray"
-                tools:text="@string/FullName" />
+                android:textColorHint="@color/Gray" />
 
             <TextView
                 android:id="@+id/tvFullname"
@@ -121,9 +123,9 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:paddingStart="15dp"
+                android:text="@string/Mobile_number"
                 android:textColor="@color/black"
-                android:textColorHint="@color/Gray"
-                tools:text="@string/Mobile_number" />
+                android:textColorHint="@color/Gray" />
 
             <TextView
                 android:id="@+id/tvMobile"
@@ -156,9 +158,9 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:paddingStart="15dp"
+                android:text="@string/Email"
                 android:textColor="@color/black"
-                android:textColorHint="@color/Gray"
-                tools:text="@string/Email" />
+                android:textColorHint="@color/Gray" />
 
             <TextView
                 android:id="@+id/tvEmail"
@@ -191,9 +193,9 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:paddingStart="15dp"
+                android:text="@string/Vehicle_Name"
                 android:textColor="@color/black"
-                android:textColorHint="@color/Gray"
-                tools:text="@string/Vehicle_Name" />
+                android:textColorHint="@color/Gray" />
 
             <TextView
                 android:id="@+id/tvVehicleName"
@@ -227,9 +229,9 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:paddingStart="15dp"
+                android:text="@string/Vehicle_Model"
                 android:textColor="@color/black"
-                android:textColorHint="@color/Gray"
-                tools:text="@string/Vehicle_Model" />
+                android:textColorHint="@color/Gray" />
 
             <TextView
                 android:id="@+id/tvVehicleModel"
