--- a/app/src/main/res/layout/activity_consumption_detail.xml
+++ b/app/src/main/res/layout/activity_consumption_detail.xml
@@ -310,7 +310,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="320dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="55dp"
             android:hint="@string/Kilometer_Per_Liter"
             android:textColorHint="@color/Gray"
             app:boxBackgroundColor="@color/white"
@@ -336,7 +336,7 @@
                 android:layout_height="50dp"
                 android:paddingStart="15dp"
                 android:paddingTop="10dp"
-                android:text="@string/Kilometer_Per_Liter"
+                android:text="@string/For_Updating"
                 android:textColor="@color/black"
                 android:textColorHint="@color/Gray"
                 android:textSize="20sp" />
@@ -346,6 +346,7 @@
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:text="GAS UP INFORMATION"
             android:textColor="@color/black"
             android:textStyle="bold"
