--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,16 +28,6 @@
             app:layout_constraintTop_toBottomOf="@+id/tvFuelGasUpHistory"
             app:layout_constraintVertical_bias="0.608" />
 
-        <ImageView
-            android:id="@+id/imgBtnMenu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            app:layout_constraintBottom_toBottomOf="@+id/tvFuelGasUpHistory"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tvFuelGasUpHistory"
-            app:srcCompat="@drawable/baseline_menu_24" />
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -110,7 +100,8 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/recyclerView"
             app:layout_constraintEnd_toStartOf="@+id/btnInfo"
-            app:layout_constraintStart_toEndOf="@+id/imgBtnMenu"
+            app:layout_constraintHorizontal_bias="0.084"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.5" />
 
